# set-valued-viz

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  periodic
docs/: boundary_ode_viz_notes.tex  parameterized_systems.tex
frontend/: package-lock.json  package.json  test_wasm.html  ubicomp_ed25519  ubicomp_ed25519.pub  vite.config.js
py/: .gitignore  README.md  __containers.py  __equation.py  __gui.py  __mask.py  __masspointscontainer.py  __points_and_masks.py  __system.py  __vectors.py  _gui_canvasdraw.py  _gui_matplotlib.py  _gui_opengl.py  _imports.py  _quick_visuals.py  app.py  compile_to_executable.py  console_interface.py  func_equation.py  func_mask.py  func_system.py  func_vectors.py  funcstack_model_console_interface.py  graphical_interface.py  graphical_interface2.py  graphical_interface3.py  interface.py  interface_console.py  interface_tkinter.py  mask_model.py  mask_model2.py  mask_model_console_interface.py  newton.py  noise_geometry.py  normals_model.py  normals_model2.py  normals_model3.py  opengl_practice.py  periodic_point_detection.py  probability_arrays.py  (+3 more)
py_flask/: flask_run_debug.ps1  flask_run_public.ps1  script_log.txt
py_tcp/: __equation.py  __points_and_masks.py  _quick_visuals.py  normals_model3.py  start_server.py  test_client.py
src/: benchmark.rs  boundary_periodic.rs  continuous_ds.rs  duffing.rs  duffing_manifold.rs  duffing_periodic.rs  dynamical_systems.rs  func_equation.rs  funcstack_model_console_interface.py  gaio.rs  hausdorff.rs  henon_periodic.rs  integrator.rs  lib.rs  lorenz.rs  main.rs  mask_model.py  parameters.rs  (+8 more)
(+90 files in other folders)
