[package]
name = "lorenz-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
serde = { version = "1.0.221", features = ["derive"]}
serde_json = "1.0.144"
js-sys = "0.3"
kdtree = "0.8.0"

getrandom = { version = "0.2.16", features = ["js"]}
regex = "1.12.2"

[lib]
crate-type = ["cdylib", "rlib"]





