[package]
name = "henon-periodic-orbits"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra="0.34.1" 
nalgebra-sparse="0.11.0"
rayon="1.5.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.221", features = ["derive"] }
evalexpr = "11.3.0"

serde_json = "1.0.144"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.16", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }

kdtree = { version = "0.8.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8.1", default-features = false }
regex = "1.12.2"

[profile.release]
opt-level = 3
lto = true